<OptionCard /> has been created, and country options are displayed based on searchWord

--- a/src/index.css
+++ b/src/index.css
@@ -12,9 +12,14 @@ color: white;
 
 }
 
-
 .search {
   display: flex;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
+}
+
+.option {
+  border: 1px solid white;
+  padding: 1rem;
 }
