--- a/src/index.css
+++ b/src/index.css
@@ -38,3 +38,16 @@ button {
   background: linear-gradient(to right, rgba(255,255,255,.8), rgba(255,255,255,.3));
   backdrop-filter: blur(4px);
 }
+
+.option:hover {
+  background-color: yellow;
+}
+
+.country-info {
+  display: flex;
+  justify-content: center;
+  border: 1px solid white;
+  height: 20rem;
+  width: 60%;
+  margin-left: 20%;
+}
