email fixed and about pagge content styled

--- a/src/index.css
+++ b/src/index.css
@@ -70,3 +70,10 @@ button {
   height: 30rem;
   width: 30rem;
 }
+
+.about {
+  border: 1px solid white;
+  color: black;
+  background: linear-gradient(to right, rgba(255,255,255,.8), rgba(255,255,255,.3));
+  backdrop-filter: blur(4px);
+}
