--- a/src/index.css
+++ b/src/index.css
@@ -113,3 +113,12 @@ label {
   color:chartreuse;
   text-shadow: 2px;
 }
+
+.allCountriesPageBtns {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-evenly;
+  margin-bottom: 2rem;
+
+}
