--- a/src/index.css
+++ b/src/index.css
@@ -11,6 +11,10 @@ color: white;
   margin-right: 2rem;
 }
 
+.link{
+  text-decoration: none;
+}
+
 .search {
   display: flex;
   flex-direction: column;
@@ -89,23 +93,30 @@ button {
 
 .all-countries-container{
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   flex-wrap: wrap;
+  justify-content: space-evenly;
+  row-gap: 2rem;
   border: 1px solid white;
   max-width: 100vw;
 }
 
 .countryCard {
   display: flex;
+  flex-direction: column;
   align-items: center;
   justify-content: space-evenly;
+  color: black;
+  background: linear-gradient(to right, rgba(255,255,255,.8), rgba(255,255,255,.3));
+  backdrop-filter: blur(4px);
   border: 1px solid white;
-  height: 5rem;
+  height: 24rem;
+  width: 18rem;
 }
 
 .countryCard-flag {
-  height: 2rem;
-  width: 3rem;
+  height: 4rem;
+  width: 6rem;
 }
 
 label {
